--- a/busca-animal-main/trabalhoFacul1/teste chat - Copia/css/detalhes_anuncio.css
+++ b/busca-animal-main/trabalhoFacul1/teste chat - Copia/css/detalhes_anuncio.css
@@ -1,3 +1,13 @@
+* {
+    padding: 0;
+    margin: 0;
+    outline: none;
+    border: none;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+}
+
 .details-container {
     width: 600px;
     margin: 50px auto;
