--- a/busca-animal-main/trabalhoFacul1/teste chat - Copia/css/lista.css
+++ b/busca-animal-main/trabalhoFacul1/teste chat - Copia/css/lista.css
@@ -7,15 +7,72 @@
     border: none;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
+.animal {
+    margin: 20px auto; 
+    padding: 20px; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+    color: #344325ed;
+}
+#especie {
+    color: #000000ed;
+    border-radius: 50px;
+    border: 1px solid #08A036; 
+    appearance: none; 
+    padding-left: 14px;
+}
 
+#especie:hover {
+    pointer-events: stroke;
+}
+
+.animal h2 {
+    font-size: 1.5em; 
+    margin-bottom: 15px; 
+    color: #2AE5B9; 
+}
+
+.animal label {
+    display: block; 
+    margin: 10px 0 5px; 
+    color: #344325ed; 
+}
+.animal ::placeholder{
+    color:#000 ;
+}
+.animal input,
+.animal textarea {
+    width: 100%; 
+    padding: 10px; 
+    border: 1px solid  #344325ed; 
+    border-radius: 50px; 
+    font-size: 1em; 
+    margin-bottom: 15px; 
+}
+
+.animal button {
+    background-color: #4CAF50; 
+    color: white; 
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px; 
+    cursor: pointer; 
+    font-size: 1em; 
+}
+
+.animal button:hover {
+    background-color: #45a049; 
+}
 a {
     text-decoration: none;
     color: inherit;
+    
 }
 
 .card {
+    color:rgb(56, 126, 93);
     transition: transform 0.2s;
 }
 
@@ -24,47 +81,45 @@ a {
     cursor: pointer;
 }
 
-
 .container {
     max-width: 1200px;
     margin: auto;
     padding: 2rem 1rem;
 }
 
-/* Estilos para o container da galeria */
+
 .gallery-container {
-display: flex;
-flex-wrap: wrap;
-gap: 20px;
-justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
 }
 
-/* Estilos para cada card de anúncio */
+
 .card {
-width: 250px;
-border: 1px solid #ddd;
-border-radius: 8px;
-padding: 15px;
-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-text-align: center;
-background-color: #fff;
+    
+    width: 250px;
+    border: 1px solid rgb(33, 97, 63);
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 0px 4px 8px rgba(0, 128, 0, 0.1); 
+
 }
 
 .card img {
-width: 100%;
-height: 200px;
-object-fit: cover;
-border-radius: 8px;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
 }
 
 .card h2 {
-font-size: 1.2em;
-margin: 10px 0 5px;
+    font-size: 1.2em;
+    margin: 10px 0 5px;
+
 }
 
 .card p {
-font-size: 0.9em;
-color: #555;
+    font-size: 0.9em;
+  
 }
-
-
