--- a/busca-animal-main/trabalhoFacul1/teste chat - Copia/css/meus_anuncios.css
+++ b/busca-animal-main/trabalhoFacul1/teste chat - Copia/css/meus_anuncios.css
@@ -1,68 +1,72 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
 * {
-    padding: 0;
-    margin: 0;
-    outline: none;
-    border: none;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+ 
+    font-family: 'Roboto','Poppins', sans-serif;
 }
+
+
 
 .container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 2rem 1rem;
+    background-color: #eeeeee;
+    width: 100%;
+    margin: 0px auto;
+    padding: 40px;
+    border-radius: 10px; 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
-
 .anuncio-container {
+    width: 100%;
     display: flex;
     align-items: center;
-    border: 1px solid #ddd;
-    padding: 15px;
-    margin-bottom: 10px;
-    border-radius: 5px;
+    border: 1px solid ;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    
+    transition: transform 0.3s, box-shadow 0.3s;
 }
+
+.anuncio-container:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
 .anuncio-container img {
     width: 120px;
     height: 120px;
-    border-radius: 5px;
-    margin-right: 15px;
+    border-radius: 10px;
+    margin-right: 20px;
     object-fit: cover;
 }
+
 .anuncio-detalhes {
     flex-grow: 1;
 }
+
 .anuncio-detalhes h3 {
     margin: 0 0 10px;
+    font-weight: 600;
+    color: #344325;
 }
+
 .anuncio-detalhes p {
     margin: 0;
+    color: #555555; 
 }
-
-.btn-encerrar {
-    background-color: #ff6b6b;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 14px;
-}
-
-.btn-encerrar:hover {
-    background-color: #ff4949;
-}
-
 
 .excluir-btn {
     background-color: #ff4d4d;
     color: white;
-    padding: 8px 12px;
+    padding: 10px 15px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: 500;
+    transition: background-color 0.3s, transform 0.3s;
 }
+
 .excluir-btn:hover {
     background-color: #e63939;
+    transform: translateY(-2px); 
 }
